[package]
name = "quakeworld"
version = "0.0.1"
edition = "2021"
authors = ["Jürgen Legler"]
license = "MIT"
description = """
A collection of quakeworld related libraries.
"""

[lib]

[features]
default = ["mvd", "utils", "protocol"]
mvd = ["utils", "protocol"]
utils = []
protocol = []
ascii_strings = ["utils"]

[dependencies]
protocol-macros = { path = "./protocol-macros" }
thiserror = "1.0.26"
num_enum = "0.2.3"
byteorder = "1.4.3"
paste = "1"
strum = "0.24"
strum_macros = "0.24"
bitflags = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
