[package]
name = "quakeworld"
version = "0.0.3"
edition = "2021"
authors = ["Jürgen Legler <jogihoogi@gmail.com>"]
license = "MIT"
keywords = ["quakeworld", "quake"]
homepage = "https://github.com/jogi1/quakeworld"
repository = "https://github.com/jogi1/quakeworld"
description = """
A collection of quakeworld related libraries.
"""

[lib]

[features]
default = ["mvd", "utils", "protocol", "state", "network", "trace", "connection", "crc" ]
connection = ["protocol", "state", "network", "crc", "ascii_strings"]
state = ["protocol", "utils"]
mvd = ["utils", "protocol"]
utils = []
protocol = ["protocol-macros"]
ascii_strings = ["utils"]
network = []
trace = []
crc = []

[dependencies]
protocol-macros = { version="0.0.1", path = "./protocol-macros", package="quakeworld-protocol-macros", optional=true }
thiserror = "1.0.26"
num_enum = "0.2.3"
byteorder = "1.4.3"
paste = "1"
strum = "0.24"
strum_macros = "0.24"
bitflags = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
lazy_static = "1.4.0"
termcolor = "1.1.3"
syn = "1.0.103"
quote = "1.0.21"
unstringify = "0.1.4"
