[package]
name = "quakeworld-protocol-macros"
version = "0.0.2"
edition = "2021"
authors = ["Jürgen Legler <jogihoogi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jogi1/quakeworld"
keywords = ["quakeworld", "quake"]
repository = "https://github.com/jogi1/quakeworld"
description = """
proc-macros for the quakeworld crate.
"""

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
paste = "1"
